# forfun-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  README_CN.md  ffos.code-workspace  qemu_virt.dts  rust-toolchain.toml
.cargo/: config.toml
appbins/: blk_test  ffos-block-device  ffos-helloworld  fork_test  fs_test  heap_test  hello_world  initproc  kill_test  loop_test  loop_test2  mmap_test  pipe_test  sem_test  server_test  shell_test  shm_test  shm_test2  signal_test  sleep_test  stdin_test  yield_test
doc/: install.md  process.md  syscall.md
doc/cn/: install.md  memory.md  process.md  startup.md  syscall.md  user.md
doc/en/: arch.md  fs.md  install.md  memory.md  process.md  schedule.md  startup.md  syscall.md
drawio/: arch.drawio  architecture.drawio  ipc.drawio  mm.drawio  switch.drawio  trap.drawio
os/: Cargo.toml  Makefile  qemu.dtb  rust-toolchain.toml
os/src/: main.rs
os/src/arch/: context.rs  irq.rs  memory.rs  mod.rs  trap.rs
os/src/arch/aarch64/: context.rs  entry.S  linker.ld  linker.ld.in  mod.rs  switch.S  trampoline.rs  trap.S  trap.rs
os/src/arch/aarch64/memory/: copy.rs  mod.rs  page.rs
os/src/arch/memory/: copy.rs  mod.rs  page.rs
os/src/arch/riscv64/: context.rs  irq.rs  linker.ld  linker.ld.in  mod.rs  trampoline.rs  trap.S  trap.rs
os/src/arch/riscv64/memory/: copy.rs  mod.rs  page.rs
os/src/board/: mod.rs  riscv_qemu.rs  timer.rs
os/src/board/aarch64_qemu/: interrupt.rs  linker.ld  memory.rs  mod.rs  peripheral.rs  serial.rs  timer.rs
os/src/board/riscv64_qemu/: interrupt.rs  linker.ld  memory.rs  mod.rs  peripheral.rs  plic.rs  serial.rs  timer.rs
os/src/driver/: dts.rs  mod.rs  plic.rs  serial.rs
os/src/driver/block/: mod.rs  qemu_blk.rs
os/src/driver/ic/: gicv2.rs  mod.rs  plic.rs
os/src/driver/plic/: mod.rs  qemu_plic.rs
os/src/driver/serial/: mod.rs  qemu_serial.rs
os/src/file/: fs.rs  mod.rs  nomalfile.rs  qemu_blk.rs  stdio.rs
os/src/ipc/: pipe.rs  shm.rs
os/src/mm/: allocator.rs  area.rs  basic.rs  buddy.rs  dma.rs  mod.rs  peripheral.rs  pt.rs
os/src/process/: app.rs  context.rs  mod.rs  switch.rs
os/src/sbi/: mod.rs
os/src/syscall/: file.rs  ipc.rs  mm.rs  mod.rs  process.rs
os/src/trap/: context.rs  mod.rs
os/src/utils/: bits.rs  console.rs  mod.rs  panic.rs
scripts/: Dockerfile  install_apps.sh  start_docker.sh
src/: config.rs  main.rs
src/arch/: context.rs  mod.rs
src/driver/: mod.rs  serial.rs
src/file/: mod.rs  pipe.rs  stdio.rs
src/ipc/: channel.rs  id.rs  mod.rs  pipe.rs  rcvid.rs  semaphore.rs  server.rs  shm.rs  signal.rs
src/mm/: allocator.rs  area.rs  basic.rs  buddy.rs  elf.rs  mod.rs  pt.rs
src/process/: app.rs  context.rs  mod.rs  pid.rs  signal.rs  switch.rs
tools/: sfs-pack
user/: Cargo.toml  Makefile  rust-toolchain.toml
user/.cargo/: config.toml
user/src/: console.rs  lib.rs  linker-aarch64.ld  signal.rs  syscall.rs
(+29 files in other folders)
