[package]
name = "forfun-os"
version = "0.1.0"
edition = "2021"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
log = "0.4"
riscv = "0.10.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = ["riscv_qemu"]
riscv_qemu = []
k210 = []
