[package]
name = "forfun-os"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"

sbi-rt = { version = "0.0.3", features = ["legacy"], optional = true}
riscv = { version = "0.10.1", optional = true}

aarch64-cpu = { version = "9.x.x", optional = true}
arm_pl011 = { version = "0.1", optional = true}

[features]
default = ["riscv64_qemu"]
riscv64_qemu = ["riscv64"]
aarch64_qemu = ["aarch64"] 

aarch64 = ["aarch64-cpu", "arm_pl011"]
riscv64 = ["sbi-rt", "riscv"]

[profile.release]
debug = true
opt-level = 0