[package]
name = "forfun-os"
version = "0.1.0"
edition = "2021"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
log = "0.4"
riscv = "0.10.1"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.5.0"
xmas-elf = "0.9.1"
derive_more = "0.99.7"
spin = "0.9"
virtio-drivers = "0.7.3"
uart16550 = "0.0.1"

[features]
default = ["riscv_qemu"]
riscv_qemu = []
k210 = []

[profile.release]
debug = true
opt-level = 0
