[package]
name = "forfun-os"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.5.0"
xmas-elf = "0.9.1"
derive_more = "0.99.7"
spin = "0.9"
virtio-drivers = "0.7.3"
uart16550 = "0.0.1"

sbi-rt = { version = "0.0.3", features = ["legacy"], optional = true}
riscv = { version = "0.10.1", optional = true}

aarch64-cpu = { version = "9.x.x", optional = true}
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
arm_pl011 = { version = "0.1", optional = true }

[features]
default = ["riscv64_qemu"]

# board select
riscv64_qemu = ["riscv64"]
k210 = ["riscv64"]
aarch64_qemu = ["aarch64", "arm_pl011"]

# cpu select
riscv64 = ["riscv", "sbi-rt"]
aarch64 = ["aarch64-cpu", "tock-registers"]

[profile.release]
debug = true
opt-level = 0
